{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "fad369d6-d50d-4ccd-9baf-1942edf8ab0e",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "05eec274-5d22-4cd4-abd6-aa3b8f73b8ad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "a6f07b94-1b0c-4b5a-949a-688eb493ead6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "18ed4ab2-4d8c-43dd-ae79-531f32202ea7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5f8904e7-60ca-4d39-884e-096114eae379",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a54f1535-d15d-43e2-8f00-42811ab0e630",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "10e4fe89-5259-4beb-8813-e48e36aaa925",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "309535c0-cfb8-41f7-a153-6b7cc97e5d19",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "502d9137-5ff7-4c36-a17b-273165638a64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3e86bc05-8792-4112-84eb-c78e136d09a1",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}